# CMake

Modules/: UseJava.cmake
Tests/Java/: A.java  CMakeLists.txt  HelloWorld.java
